COMMERCE-2436 "items added" / "add more" button fixed on ie11

--- a/commerce-theme-minium/commerce-theme-minium/src/css/minium/components/add_to_cart_button.scss
+++ b/commerce-theme-minium/commerce-theme-minium/src/css/minium/components/add_to_cart_button.scss
@@ -214,8 +214,10 @@
 					display: flex;
 					height: 100%;
 					justify-content: center;
+					left: 0;
 					opacity: 0;
 					position: absolute;
+					top: 0;
 					width: 100%;
 				}
 
